# 4plymag.github.io

./: CNAME  index.html  index.js  styles.css
2021qstop10/: index.html
2022qstop10/: 2022dataset.csv  detaildf.csv  index.html  index2.html  obstime1.csv  ogindex.html
CPHcharts/: index.html  slideindex.html
QSpoll2021/: index.html
RumblePack/: index.html
SAS/: index.html
Tampa2021/: index.html
ThrasherCaptions/: ThrasherGeneratorTest.html  index.html
TomKpart1/: index.html
TomKpart2/: InteractivePie.js  LineChart.js  (+1 more)
thrasher-cover-similarity/: generate_embeddings.py  index.html  main.py  merge_metadata.py  pyproject.toml  thrasher_coordinates.json  thrasher_data.json  updated.json
thrasher-cover-similarity/_embedding_cache/: color_MayJune1982.npy  color_april1981.npy  color_april1982.npy  color_april1983.npy  color_april1984.npy  color_april1985.npy  color_april1986.npy  color_april1987.npy  color_april1988.npy  color_april1989.npy  color_april1990.npy  color_april1991.npy  color_april1992.npy  color_april1993.npy  color_april1994.npy  color_april1995.npy  color_april1996.npy  color_april1997.npy  color_april1998.npy  color_april1999.npy  color_april2000.npy  color_april2001.npy  color_april2002.npy  color_april2003.npy  color_april2004.npy  color_april2005.npy  color_april2006.npy  color_april2007.npy  color_april2008.npy  color_april2009.npy  color_april2010.npy  color_april2011.npy  color_april2012.npy  color_april2013.npy  color_april2014.npy  color_april2015.npy  color_april2016.npy  color_april2017.npy  color_april2018.npy  color_april2019.npy  (+1080 more)
(+140 files in other folders)
